develop/update: changed icons, refactoring

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </div>
                 <form id="search-lodge-form" action="#" method="get">
                     <div class="icon-place-pin flex-centered height-100">
-                        <img src="images/icones/place-pin.svg" alt="Map pin place icon" width="14" height="18">
+                        <i class="fa-solid fa-lg fa-location-dot"></i>
                     </div>
                     <div class="lodge-search-bar">
                         <input type="text" name="lodge-search" id="lodge-form-input" class="flex-centered fs18 bold">
-                        <button type="submit" class="flex-centered fs18 bold">
-                            <img src="images/icones/search-glass.svg" alt="" width="17" height="17">
-                            <span>Rechercher</span>
+                        <button type="submit" class="flex-centered fs18 bold search-button">
+                            <i class="fa-solid fa-white fa-magnifying-glass hide-desktop" aria-hidden="true"></i>
+                            <span class="hide-mobile">Rechercher</span>
                         </button>
                     </div>
                 </form>
@@ -46,25 +46,25 @@
                     <h2 class="fs18">Filtres</h2>
                     <div class="filter-buttons-container">
                         <button type="button" class="flex-centered bold">
-                            <img src="images/icones/filter-economic.svg" alt="Dollar bill icon" width="22">
+                            <i class="fa-solid fa-blue fa-lg fa-money-bill-wave" aria-hidden="true"></i>
                             <span>Économique</span>
                         </button>
                         <button type="button" class="flex-centered bold">
-                            <img src="images/icones/filter-familial.svg" alt="Person icon" height="22">
+                            <i class="fa-solid fa-blue fa-lg fa-person" aria-hidden="true"></i>
                             <span>Familial</span>
                         </button>
                         <button type="button" class="flex-centered bold">
-                            <img src="images/icones/filter-romantic.svg" alt="Heart icon" width="22">
+                            <i class="fa-solid fa-blue fa-lg fa-heart" aria-hidden="true"></i>
                             <span>Romantique</span>
                         </button>
                         <button type="button" class="flex-centered bold">
-                            <img src="images/icones/filter-trend.svg" alt="Flame icon" width="20">
+                            <i class="fa-solid fa-blue fa-lg fa-fire" aria-hidden="true"></i>
                             <span>Nos pépites</span>
                         </button>
                     </div>
                 </div>
                 <div class="search-form-tooltip">
-                    <img src="images/icones/tooltip-icon.svg" alt="Tooltip information icon" width="24">
+                    
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </div>
@@ -83,11 +83,11 @@
                                         <p class="card-subtitle">Nuit à partir de 52<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -102,11 +102,11 @@
                                         <p class="card-subtitle">Nuit à partir de 96<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -121,11 +121,11 @@
                                         <p class="card-subtitle">Nuit à partir de 76<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -140,11 +140,11 @@
                                         <p class="card-subtitle">Nuit à partir de 46<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -159,11 +159,11 @@
                                         <p class="card-subtitle">Nuit à partir de 25<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -178,11 +178,11 @@
                                         <p class="card-subtitle">Nuit à partir de 23<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -194,7 +194,7 @@
                 <section class="populaires">
                     <div class="populaires-title">
                         <h3 class="section-title">Les plus populaires</h3>
-                        <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+                        <i class="fa-solid fa-blue fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
                         <a href="#">
@@ -206,11 +206,11 @@
                                         <p class="card-subtitle">Nuit à partir de 128<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -225,11 +225,11 @@
                                         <p class="card-subtitle">Nuit à partir de 71<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -244,11 +244,11 @@
                                         <p class="card-subtitle">Nuit à partir de 68<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-blue fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
