--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
+            <img class="booki-logo" src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
             <nav class="header-tabs-container">
                 <a class="tab-button active" href="#hebergements">Hébergements</a>
                 <a class="tab-button" href="#activites">Activités</a>
