develop/edit: edited tooltip icon

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="search-form-tooltip">
-                    
+                    <i class="fa-solid fa-blue fa-xs fa-info tooltip-icon flex-centered"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </div>
