develop/fix: fixed style of logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <section class="header-nav">
-                <h1><img class="booki-logo" src="images/logo/Booki.png" alt="Booki logo" width="61" height="19"></h1>
+                <h1 class="booki-logo"><img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19"></h1>
                 <nav class="header-tabs-container">
                     <a class="tab-button active" href="#hebergements">Hébergements</a>
                     <a class="tab-button" href="#activites">Activités</a>
